--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "deneme",
   "version": "1.0.0",
+  "engines": {
+   "node": "14.15.4"
+   }
   "description": "my first try on heroku",
   "main": "server.js",
   "scripts": {
