--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "my first try on heroku",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node server.js",
+	"start": "npm start"
   },
   "author": "me",
   "license": "ISC"
